--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:background="#99000000">
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="60dp"
+        android:layout_height="70dp"/>
 </LinearLayout>
