--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -3,10 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    android:background="#99000000">
+    android:fitsSystemWindows="true">
 
     <View
-        android:layout_width="60dp"
-        android:layout_height="70dp"/>
+        android:layout_width="200dp"
+        android:layout_height="250dp"/>
 </LinearLayout>
