--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_marginTop="200dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/text">
 
-    </FrameLayout>
+    </androidx.viewpager2.widget.ViewPager2>
 
 </FrameLayout>
